# finance

./: .gitignore  main.py  pyproject.toml  requirement.txt
finance/: configs.py
finance/data_migratior/: export_payment_data.py  migrate.py
finance/pg_sql/: adapter.py  base.py  connection_pooling.py  context.py  manager.py  setup.py
finance/pipelines/: migrate_data.ipynb  transform.ipynb
