[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.3",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "xlrd>=2.0.1",
]
